ParkingApp/k8s/audit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-audit
  template:
    metadata:
      labels:
        app: ms-audit
    spec:
      containers:
        - name: ms-audit
          image: parking/ms-audit:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: ms-audit
spec:
  selector:
    app: ms-audit
  ports:
    - port: 3001
      targetPort: 3001
