ParkingApp/k8s/tickets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-tickets
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-tickets
  template:
    metadata:
      labels:
        app: ms-tickets
    spec:
      containers:
        - name: ms-tickets
          image: parking/ms-tickets:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: ms-tickets
spec:
  selector:
    app: ms-tickets
  ports:
    - port: 3002
      targetPort: 3002
