ParkingApp/k8s/usuarios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-usuarios-roles-oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-usuarios-roles-oauth
  template:
    metadata:
      labels:
        app: ms-usuarios-roles-oauth
    spec:
      containers:
        - name: ms-usuarios-roles-oauth
          image: parking/ms-usuarios-roles-oauth:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ms-usuarios-roles-oauth
spec:
  selector:
    app: ms-usuarios-roles-oauth
  ports:
    - port: 8082
      targetPort: 8082
