ParkingApp/k8s/vehiculos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-vehiculos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-vehiculos
  template:
    metadata:
      labels:
        app: ms-vehiculos
    spec:
      containers:
        - name: ms-vehiculos
          image: parking/ms-vehiculos:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ms-vehiculos
spec:
  selector:
    app: ms-vehiculos
  ports:
    - port: 3000
      targetPort: 3000
