ParkingApp/k8s/zonas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-zonas-espacios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-zonas-espacios
  template:
    metadata:
      labels:
        app: ms-zonas-espacios
    spec:
      containers:
        - name: ms-zonas-espacios
          image: parking/ms-zonas-espacios:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ms-zonas-espacios
spec:
  selector:
    app: ms-zonas-espacios
  ports:
    - port: 8081
      targetPort: 8081
