ParkingApp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parqueadero-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        - parqueadero.espe.edu.ec
      secretName: parqueadero-tls
  rules:
    - host: parqueadero.espe.edu.ec
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
          - path: /tickets
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
          - path: /vehiculo
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
          - path: /audit
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000
